# SimpleCountPass

./: .gitignore  CMakeLists.txt  README.md  libtest.c  static_test.sh  test.c
SimpleCountPass/: CMakeLists.txt  SimpleCountPass.cpp
